[package]
name = "fchat3-export"
version = "0.1.0"
authors = ["Carlen White <WhiterSuburban@gmail.com>"]

[dependencies]
fchat3-log-lib = {git = "https://github.com/WhiteHusky/fchat3-log-lib"}
handlebars = "3.3"
chrono = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"] 

[dependencies.clap]
version = "2.33"
features = ["yaml"]